# bigly

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/: settings.json
.github/workflows/: build.yml  codecov.yml  tests.yml
assets/: logo.txt  simple_logo.txt
cli/: Cargo.toml
cli/src/: lib.rs
core/: Cargo.toml
core/src/: commands.rs
specs/: README.md
src/: main.rs
tests/: test_cli.rs
utils/: Cargo.toml
utils/src/: app_config.rs  error.rs  logger.rs
utils/tests/: test_config.rs
