[package]
name = "bigly"
version = "0.0.1"
authors = ["pomcho555 <pomcho555@users.noreply.github.com>"]
edition = "2024"
repository = ""
readme = "README.md"
license = "MIT"
keywords = [""]
description = """
A CLI tool that greps all files under the current directory.
"""

[workspace]
members = [
    "utils",
    "cli",
    "core",
]

[dependencies]
utils = { path = "utils" }
cli = { path = "cli"}
core = { path = "core" }
human-panic = "1.0.3"
better-panic = "0.3.0"
log = "0.4.11"
slog-scope = "4.3.0"
slog-stdlog = "4.1.0"

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "3.1"

[profile.dev]
opt-level=0
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.release]
opt-level=3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[profile.test]
opt-level = 1
debug = true
rpath = false
lto = false
debug-assertions = true
codegen-units = 4

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
