[package]
name = "cli"
version = "0.0.1"
authors = ["pomcho555 <pomcho555@users.noreply.github.com>"]
description = "CLI interface"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]

[dev-dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
