[package]
name = "cli"
version = "0.0.1"
authors = ["pomcho555 <pomcho555@users.noreply.github.com>"]
description = "CLI interface"
edition = "2024"

[dependencies]
utils = { path = "../utils" }
core = { path = "../core" }

[dependencies.clap]
version = "4.5"
features = ["derive"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
