[package]
name = "core"
version = "0.0.1"
authors = ["pomcho555 <pomcho555@users.noreply.github.com>"]
description = "The application core code"
edition = "2024"

[dependencies]
utils = { path = "../utils" }

rand = "0.7.3"
log = "0.4.11"

[dependencies.clap]
version = "3.0.0-beta.2"
features = ["yaml"]
