[package]
name = "utils"
version = "0.0.1"
authors = ["pomcho555 <pomcho555@users.noreply.github.com>"]
description = "Various utilities and functionalities"
edition = "2024"

[dependencies]
thiserror = "1.0"
config = "0.14"
lazy_static = "1.4"
slog = "2.7"
slog-term = "2.9"
slog-scope = "4.4"
slog-async = "2.8"
slog-stdlog = "4.1"
log = "0.4"
serde = { version = "1.0", features = ["derive"]}

[dependencies.clap]
version = "4.5"
features = ["derive"]

